k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: jumper93/backend:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /api/hello/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/hello/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
